--- a/index.html
+++ b/index.html
@@ -6,156 +6,216 @@
 <title>RIC AI — CRION</title>
 <style>
   :root{
-    --bg1:#0e73a9; --bg2:#1b7eb3;
-    --ink:#0b1220; --muted:#6b7a90; --line:#dfe8f3;
-    --ok1:#22c55e; --ok2:#84cc16;
-    --card:#ffffff; --shadow:0 20px 50px rgba(0,0,0,.10);
+    --ink:#0f172a; --muted:#64748b; --line:#e7eef7;
+    --lime:#22c55e; --lime2:#7dd36b; --danger:#ef4444;
+    --tag:#f2e7ff; --tag-ink:#6d28d9;
+    --bg1:#0e5f9a; --bg2:#1570a5;
   }
   *{box-sizing:border-box}
-  body{margin:0;font:15px/1.6 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:linear-gradient(135deg,var(--bg1),var(--bg2));color:var(--ink)}
-  .wrap{max-width:1260px;margin:0 auto;padding:18px}
-
-  /* HEADER fixo e visível */
-  .hero{
-    background:linear-gradient(135deg,#1e7db2,#2c8ec2);
-    border-radius:18px;padding:12px 16px;box-shadow:var(--shadow);
-    display:flex;align-items:center;gap:14px;justify-content:space-between
+  body{
+    margin:0;
+    font:14px/1.55 ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Arial;
+    color:var(--ink);
+    background:linear-gradient(180deg,#0f6aa7 0%, #0d5790 100%);
+    min-height:100vh;
   }
-  .logo{height:44px;display:block}
-  .tools{display:flex;gap:12px}        /* ícones presos ao topo, não flutuam */
-  .tool{
-    width:44px;height:44px;border-radius:14px;background:#ffffff20;border:1px solid #ffffff3d;
-    display:grid;place-items:center;backdrop-filter:blur(4px);cursor:pointer;transition:.15s
-  }
-  .tool:hover{transform:translateY(-1px);background:#ffffff2e}
-  .tool svg{width:22px;height:22px}
+  .wrap{max-width:1260px;margin:0 auto;padding:18px 18px 28px}
 
-  /* GRID */
-  .grid{display:grid;grid-template-columns:1.05fr .95fr;gap:16px;margin-top:16px}
+  /* Header minimal (sem barra preenchida) */
+  .header{
+    display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:12px;
+    margin-bottom:12px;
+  }
+  .logo{height:44px}
+  .tools{justify-self:center; display:flex; gap:14px}
+  .fab{
+    width:48px; height:48px; border-radius:14px;
+    background:rgba(255,255,255,.16); border:1px solid rgba(255,255,255,.35);
+    display:grid; place-items:center; backdrop-filter:blur(6px); cursor:pointer; transition:.15s;
+  }
+  .fab:hover{transform:translateY(-1px); background:rgba(255,255,255,.22)}
+  .fab svg{width:24px;height:24px}
+
+  /* Grid principal (2 colunas) */
+  .grid{display:grid;grid-template-columns:1fr 1fr;gap:16px}
   @media (max-width:980px){ .grid{grid-template-columns:1fr} }
 
-  /* CARDS */
-  .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:12px;box-shadow:var(--shadow)}
-  .tag{display:inline-flex;align-items:center;gap:8px;background:#f3eaff;color:#5b21b6;border:1px solid #e9d7ff;border-radius:999px;padding:6px 12px;font-weight:800;font-size:12px}
-  h2{margin:10px 0 12px;font-size:20px;letter-spacing:.2px}
+  /* Cards */
+  .card{background:#fff;border:1px solid var(--line);border-radius:14px;padding:12px}
+  .tag{display:inline-flex;align-items:center;gap:8px;background:var(--tag);color:var(--tag-ink);
+       border:1px solid #eadbff;border-radius:999px;padding:6px 12px;font-weight:800;font-size:12px}
+  h2{margin:8px 0 10px;font-size:18px}
   .row{display:flex;gap:10px;align-items:center}
-  .input{flex:1;border:1px solid var(--line);border-radius:10px;padding:12px 14px;background:#f9fbff}
-  .btn{appearance:none;border:0;border-radius:12px;padding:12px 18px;font-weight:900;cursor:pointer}
-  .btn-ok{color:#053;background:linear-gradient(135deg,var(--ok1),var(--ok2));box-shadow:0 10px 22px rgba(34,197,94,.28)}
-  .out{white-space:pre-wrap;min-height:160px;border:1px dashed var(--line);border-radius:12px;padding:12px;margin-top:10px;background:#fbfdff}
+  .input{width:100%;border:1px solid var(--line);border-radius:10px;padding:10px 12px;background:#fbfcff}
+  .btn{appearance:none;border:0;border-radius:10px;padding:10px 14px;font-weight:800;cursor:pointer}
+  .btn-search{color:#053;background:linear-gradient(135deg,var(--lime),var(--lime2)); box-shadow:0 10px 22px rgba(34,197,94,.28)}
+  .btn-plain{background:#f7f7fb;color:#111;border:1px solid var(--line)}
+  .hint{font-size:12px;color:var(--muted);margin-top:6px}
+  .out{white-space:pre-wrap;min-height:120px;border:1px dashed var(--line);border-radius:10px;padding:10px;margin-top:10px;background:#fbfbff}
 
-  /* RR.png SEM CARD: bloco transparente centralizado */
-  .rrSlot{min-height:360px;display:grid;place-items:center}
-  .rr{max-width:520px;width:100%;height:auto;display:block;filter:drop-shadow(0 18px 38px rgba(86,115,189,.35))}
+  /* Mascote (rr.png) sem card, centralizado no painel esquerdo */
+  .mascotWrap{position:relative; min-height:380px}
+  .mascot{
+    position:absolute; left:50%; transform:translateX(-50%);
+    width:min(520px, 92%); max-width:560px;
+    filter: drop-shadow(0 28px 60px rgba(35,0,120,.20));
+    pointer-events:none; user-select:none;
+  }
+
+  footer{margin:18px 0 8px;text-align:center;color:#c9e6ff}
+  .footnote{font-size:12px;opacity:.9}
 </style>
 </head>
 <body>
   <div class="wrap">
-    <!-- TOPO AZUL -->
-    <header class="hero">
-      <img class="logo" src="HDS.png" alt="CRION" id="logoCrion">
+    <!-- HEADER sem barra azul -->
+    <div class="header">
+      <img class="logo" src="CRION.png" alt="CRION"
+           onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ric-crion/main/CRION.png';">
       <div class="tools">
-        <button class="tool" id="toggleNote" title="Post-it" aria-label="Post-it">
+        <!-- Post-it (SVG nítido) -->
+        <button id="toggleNote" class="fab" title="Post-it">
           <svg viewBox="0 0 24 24" fill="none">
-            <path d="M7 3h7a4 4 0 0 1 4 4v6l-6 6H7a4 4 0 0 1-4-4V7a4 4 0 0 1 4-4Z" stroke="#fff" stroke-width="2"/>
-            <path d="M18 13h-3a4 4 0 0 0-4 4v3" stroke="#fff" stroke-width="2"/>
+            <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3Z" stroke="#fff" stroke-width="2"/>
+            <path d="M19 13h-4a3 3 0 0 0-3 3v4" stroke="#fff" stroke-width="2"/>
           </svg>
         </button>
-        <button class="tool" id="toggleCalc" title="Calculadora" aria-label="Calculadora">
+        <!-- Calculadora (SVG nítido) -->
+        <button id="toggleCalc" class="fab" title="Calculadora">
           <svg viewBox="0 0 24 24" fill="none">
-            <rect x="4" y="3" width="16" height="18" rx="3" stroke="#fff" stroke-width="2"/>
+            <rect x="4" y="3" width="16" height="18" rx="2" stroke="#fff" stroke-width="2"/>
             <rect x="7" y="6" width="10" height="3" rx="1" fill="#fff"/>
             <path d="M8 12h2M8 16h2M12 12h2M12 16h2M16 12h2M16 16h2" stroke="#fff" stroke-width="2"/>
           </svg>
         </button>
       </div>
-      <img class="logo" src="icon2.png" alt="HDSTEC" id="logoHdstec">
-    </header>
+      <img class="logo" src="HDS.png" alt="HDSTEC"
+           onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ric-crion/main/HDS.png';">
+    </div>
 
+    <!-- GRID: esquerda (alerta + rr.png), direita (sites + procedimentos) -->
     <div class="grid">
-      <!-- ESQUERDA: ALERTA -->
-      <section class="card">
-        <div class="tag">ALERTAS</div>
-        <h2>Controle de alerta</h2>
-        <div class="row"><button id="btnAlert" class="btn btn-ok">PESQUISAR</button></div>
-        <div id="alertBox" class="out" style="min-height:120px;margin-top:10px">—</div>
-      </section>
+      <div>
+        <!-- ALERTA -->
+        <section class="card">
+          <div class="tag">ALERTA</div>
+          <h2>Controle de alerta</h2>
+          <div class="row"><button id="btnAlert" class="btn btn-search">Pesquisar</button></div>
+          <div class="hint" id="alertBusy" style="display:none">Pesquisando…</div>
+          <div id="alertMsg"  style="display:none;font-size:22px;font-weight:900;color:#b91c1c;text-align:center;margin-top:8px">—</div>
+          <div id="alertResp" style="display:none;font-size:13px;font-weight:600;color:#334155;text-align:center;margin-top:4px;text-transform:lowercase">—</div>
+        </section>
 
-      <!-- DIREITA: SITES -->
-      <section class="card">
-        <div class="tag" style="background:#e9efff;color:#1e3a8a;border-color:#d8e4ff">SITES</div>
-        <h2>CRION COMERCIAL (AFFIX, ALTER e CONECTA PLAN)</h2>
-        <div class="row" style="margin-top:6px">
-          <input id="qSites" class="input" placeholder="Digite sua pergunta ....."/>
-          <button id="btnSites" class="btn btn-ok">PESQUISAR</button>
+        <!-- RR sem card, centralizado -->
+        <div class="mascotWrap" aria-hidden="true">
+          <img class="mascot" src="rr.png" alt="">
         </div>
-        <div id="outSites" class="out">—</div>
-      </section>
-
-      <!-- ESQUERDA (2ª linha): RR.png centralizado, sem card -->
-      <div class="rrSlot">
-        <img src="rr.png" class="rr" alt="RIC — Precisa de ajuda?"/>
       </div>
 
-      <!-- DIREITA (2ª linha): PROCEDIMENTOS -->
-      <section class="card">
-        <div class="tag" style="background:#fff4e5;color:#9a3412;border-color:#ffe2bf">PROCEDIMENTOS</div>
-        <h2>CRION COMERCIAL (AFFIX, ALTER e CONECTA PLAN)</h2>
-        <div class="row" style="margin-top:6px">
-          <input id="qCRION" class="input" placeholder="Digite sua pergunta ....."/>
-          <button id="btnCRION" class="btn btn-ok">PESQUISAR</button>
-        </div>
-        <div id="crionList" class="out">—</div>
-      </section>
+      <div>
+        <!-- SITES -->
+        <section class="card">
+          <div class="tag">SITES OFICIAIS</div>
+          <h2>CRION COMERCIAL (AFFIX, ALTER e CONECTA PLAN)</h2>
+          <div class="row" style="margin-top:6px">
+            <input id="qSites" class="input" placeholder="Digite sua pergunta .....">
+            <button id="btnSites" class="btn btn-search">Pesquisar</button>
+          </div>
+          <div class="hint" id="sitesBusy" style="display:none">Pesquisando…</div>
+          <div id="outSites" class="out">—</div>
+        </section>
+
+        <!-- PROCEDIMENTOS -->
+        <section class="card" style="margin-top:16px">
+          <div class="tag">PROCEDIMENTOS CRION</div>
+          <h2>Procedimentos</h2>
+          <p class="hint">Material de Treinamento, Quiz, Alertas &gt; 30 dias e demais informações.</p>
+          <div class="row">
+            <input id="qCRION" class="input" placeholder="Ex.: Onboarding, Retenção, URA, Script de Cobrança, Affix">
+            <button id="btnCRION" class="btn btn-search" style="min-width:112px">Pesquisar</button>
+          </div>
+          <div class="hint" id="crionBusy" style="display:none">Listando…</div>
+          <div id="crionStatus" class="hint" style="margin-top:6px">—</div>
+          <ul id="crionList" style="margin:8px 0 0;padding:0;list-style:none"></ul>
+        </section>
+      </div>
     </div>
+
+    <footer><span class="footnote">© 2025 HDSTEC • CRION</span></footer>
   </div>
 
-<script>
-const APP_URL="https://script.google.com/macros/s/AKfycbxnTEhSw1u5Ib0jCqJsURoZM30VfCpfeqKqKvYpXdKgJDUPrw8Q8hScbSzw4zVkI7u0rw/exec";
-async function gas(fn,p={}){const r=await fetch(APP_URL+"?fn="+encodeURIComponent(fn),{method:"POST",headers:{"Content-Type":"text/plain"},body:JSON.stringify(p)});if(!r.ok)throw new Error("HTTP "+r.status);return r.json();}
-const esc=s=>String(s||"").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;");
+  <!-- JS: apenas os handlers já existentes que você usa com o GAS -->
+  <script>
+    const $ = s => document.querySelector(s);
+    const show = (el, on=true)=>{ if(!el) return; el.style.display = on? '' : 'none'; };
 
-btnAlert.onclick=async()=>{
-  alertBox.textContent="Pesquisando...";
-  try{
-    const r=await gas("getalert",{});
-    if(!r||r.ok===false){alertBox.textContent="Falha ao consultar.";return;}
-    if(!r.found){alertBox.textContent="Sem recado no momento.";return;}
-    alertBox.innerHTML=`<div style="font-weight:900;color:#b91c1c;font-size:22px">🚨 ${esc(String(r.mensagem||"").toUpperCase())}</div>`+(r.responsavel?`<div style="color:#475569;margin-top:6px">responsável: ${esc(r.responsavel)}</div>`:"");
-  }catch{alertBox.innerHTML=`<b style="color:#b91c1c">Erro: Failed to fetch</b>`;}
-};
+    // ALERTA (mesmo comportamento, sem botão Ajustar)
+    async function call(endpoint, payload){
+      return new Promise((resolve,reject)=>{
+        const r = google.script.run.withSuccessHandler(res=>{
+          if(endpoint==='chat' && typeof res==='string') resolve({ok:true, text:res});
+          else resolve(res);
+        }).withFailureHandler(err=>reject(err));
+        try{
+          switch(endpoint){
+            case 'getalert': r.apiGetAlert(); break;
+            case 'searchcrion': r.apiSearchCrion(payload.q); break;
+            case 'fetchcrionsnippets': r.apiFetchCrionSnippets(payload.sessionId, payload.from, payload.limit); break;
+            case 'chat': r.chatServer(payload.q, navigator.userAgent||''); break;
+            default: reject('endpoint não mapeado');
+          }
+        }catch(e){ reject(e); }
+      });
+    }
+    $('#btnAlert').addEventListener('click', async ()=>{
+      const msg=$('#alertMsg'), resp=$('#alertResp');
+      show(msg,false); show(resp,false); show($('#alertBusy'),true);
+      try{
+        const r = await call('getalert',{});
+        if(!r || r.ok===false){ msg.textContent="Falha ao consultar."; show(msg,true); return; }
+        if(!r.found){ msg.textContent="Sem recado no momento."; show(msg,true); return; }
+        msg.textContent = "🚨 " + String(r.mensagem||"—").toUpperCase(); show(msg,true);
+        if(r.responsavel){ resp.textContent = String(r.responsavel||"").toLowerCase(); show(resp,true); }
+      }catch(e){ msg.textContent="Erro: "+(e.message||e); show(msg,true);
+      }finally{ show($('#alertBusy'),false); }
+    });
 
-btnSites.onclick=async()=>{
-  const q=(qSites.value||"").trim(); if(!q){outSites.textContent="Digite a pergunta.";return;}
-  outSites.textContent="Pesquisando...";
-  try{
-    const r=await gas("chat",{q}); const txt=(r&&(r.text||r.answer))||"—";
-    outSites.innerHTML=String(txt).replace(/(https?:\/\/[^\s)]+)/g,m=>`<a href="${m}" target="_blank" rel="noopener">${m}</a>`);
-  }catch{outSites.innerHTML=`<b style="color:#b91c1c">Erro: Failed to fetch</b>`;}
-};
+    // SITES
+    $('#btnSites').addEventListener('click', async ()=>{
+      const q=($('#qSites').value||'').trim();
+      if(!q){ $('#outSites').textContent='Digite a pergunta.'; return; }
+      show($('#sitesBusy'),true); $('#outSites').textContent='—';
+      try{
+        const qRich = q + " — FORMATO: responda em português e liste as URLs oficiais no final. Substitua notas por: 'Fontes oficiais Affix, Alter, Hapvida'.";
+        const r = await call('chat',{q:qRich});
+        const txt = (r && r.text) ? r.text : '—';
+        const html = String(txt).replace(/(https?:\/\/[^\s]+)/g, m=>`<a href="${m}" target="_blank" rel="noopener">${m}</a>`);
+        $('#outSites').innerHTML = html;
+      }catch(e){ $('#outSites').textContent='Erro: '+(e.message||e);
+      }finally{ show($('#sitesBusy'),false); }
+    });
 
-btnCRION.onclick=async()=>{
-  const q=(qCRION.value||"").trim(); if(!q){crionList.textContent="Digite um termo.";return;}
-  crionList.textContent="Listando arquivos...";
-  try{
-    const res=await gas("searchcrion",{q}); if(!res||res.ok===false){crionList.textContent="Erro ao buscar.";return;}
-    if(!(res.items||[]).length){crionList.textContent="Nenhum resultado.";return;}
-    crionList.innerHTML=(res.items||[]).slice(0,40).map((it,idx)=>(
-      `<div style="padding:8px 0;border-top:1px solid #e8eef6">
-         <div><b>${esc(it.name)}</b> • <a href="${it.url}" target="_blank" rel="noopener">Abrir</a></div>
-         <div style="font-size:12px;color:#6b7a90">${it.updated?new Date(it.updated).toLocaleString():"—"}</div>
-         <div id="snip_${idx}" style="font-size:12px;color:#6b7a90">Carregando prévias…</div>
-       </div>`)).join("");
-    let from=0; while(from<res.items.length){const r=await gas("fetchcrionsnippets",{sessionId:res.sessionId,from,limit:6});
-      (r.items||[]).forEach(row=>{const el=document.getElementById("snip_"+row.index);
-        el.innerHTML=(row.snippets&&row.snippets.length)?row.snippets.map(s=>`<div style="color:#374151;margin:6px 0">${esc(s)}</div>`).join(""):"<span style='color:#6b7a90'>—</span>";});
-      from=r.to; if(from>=40) break;}
-  }catch{crionList.innerHTML=`<b style="color:#b91c1c">Erro: Failed to fetch</b>`;}
-};
-
-/* logos com mesma altura */
-document.getElementById('logoCrion').style.height=
-document.getElementById('logoHdstec').style.height='44px';
-</script>
+    // CRION
+    $('#btnCRION').addEventListener('click', doCRION);
+    async function doCRION(){
+      const q=($('#qCRION').value||'').trim();
+      if(!q){ $('#crionStatus').textContent='Digite um termo.'; return; }
+      show($('#crionBusy'),true); $('#crionStatus').textContent='Listando…'; $('#crionList').innerHTML="";
+      try{
+        const res = await call('searchcrion',{q});
+        if(!res || res.ok===false){ $('#crionStatus').textContent='Erro ao buscar: '+(res&&res.message?res.message:''); return; }
+        const items=res.items||[]; $('#crionStatus').textContent=`Resultados: ${items.length}`;
+        const frag=document.createDocumentFragment();
+        items.forEach((it,idx)=>{
+          const li=document.createElement('li'); li.style.padding="10px 0"; li.style.borderTop="1px solid var(--line)";
+          li.innerHTML=`<div><b>${(it.name||'').replace(/^(OCR_TMP_|TMP_SLIDES_)+/ig,'')}</b> • <a href="${it.url}" target="_blank" rel="noopener">Abrir</a></div>
+                        <div class="hint">Tamanho: ${it.size? (it.size/1024/1024).toFixed(1)+' MB' : '—'} • Atualizado: ${it.updated? new Date(it.updated).toLocaleString(): "—"}</div>`;
+          frag.appendChild(li);
+        });
+        $('#crionList').appendChild(frag);
+      }catch(e){ $('#crionStatus').textContent='Erro: '+(e.message||e);
+      }finally{ show($('#crionBusy'),false); }
+    }
+  </script>
 </body>
 </html>
